package ConversionTemperatura;

public class ExceptionTemperatura extends Exception{
    public ExceptionTemperatura(String mensaje) {
        super(mensaje);
    }
}